fix overflow border issue

--- a/src/plugins/explore/public/components/query_panel/components/editor_stack/index.scss
+++ b/src/plugins/explore/public/components/query_panel/components/editor_stack/index.scss
@@ -17,8 +17,11 @@ $customSize10: 10px;
     position: relative;
 
     .promptEditor {
-      border: 1px solid $euiBorderColor;
       border-radius: $euiBorderRadiusSmall;
+
+      .monaco-editor .overflow-guard {
+        border: $euiBorderThin;
+      }
 
       .monaco-editor .view-overlays .current-line {
         border: none;
